refactor: HTML 내용 수정

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <!-- css -->
     <link rel="stylesheet" href="./css/layout.css" />
     <link rel="stylesheet" href="./css/main.css" />
+    <link rel="icon" href="./images/icon/favicon.ico" type="image/x-icon" />
     <title>정희리 신입 웹퍼블리셔 포트폴리오입니다.</title>
     <!-- jQuery -->
     <script
@@ -37,8 +38,9 @@
       <section class="sc_introduce">
         <div class="info">
           <p>
-            안녕하세요. 이해하기 쉬운 코드를 작성하려고 노력하는 정희리입니다. HTML, CSS, JavaScript를 이용하여 웹 개발
-            하는 것을 좋아합니다. 기본을 단단히 하여 변화에도 흔들리지 않는 개발자로 나아가도록 하겠습니다.
+            안녕하세요. 이해하기 쉬운 코드를 작성하려고 노력하는 정희리입니다. <br />
+            HTML, CSS, JavaScript를 이용하여 인터랙티브한 웹을 만드는 것을 좋아합니다.<br />
+            지속적으로 변화하는 기술 환경에 발맞추어, 웹 개발 분야에서 끊임없이 성장하고 발전해 나가겠습니다. <br />
           </p>
         </div>
         <div class="chat_wrap">
@@ -77,12 +79,13 @@
                 <a href="https://github.com/hrj2233/nike-web" class="btn" target="_blank">Github</a>
               </div>
               <div class="skill">
-                <span>#HTML/CSS</span>
-                <span>#scss</span>
-                <span>#gsap</span>
-                <span>#swiper</span>
+                <span>#HTML</span>
+                <span>#CSS</span>
+                <span>#SCSS</span>
                 <span>#JavaScript</span>
-                <span>#jquery</span>
+                <span>#jQuery</span>
+                <span>#Swiper</span>
+                <span>#GSAP</span>
               </div>
             </div>
             <div class="img_wrap">
@@ -104,13 +107,13 @@
                 <a href="https://github.com/hrj2233/tada-static-web" class="btn" target="_blank">Github</a>
               </div>
               <div class="skill">
-                <span>#HTML/CSS</span>
-                <span>#vimeo api</span>
-                <span>#scss</span>
-                <span>#gsap</span>
-                <span>#swiper</span>
+                <span>#HTML</span>
+                <span>#CSS</span>
+                <span>#SCSS</span>
                 <span>#JavaScript</span>
-                <span>#jquery</span>
+                <span>#jQuery</span>
+                <span>#Swiper</span>
+                <span>#GSAP</span>
               </div>
             </div>
             <div class="img_wrap tada">
@@ -132,12 +135,13 @@
                 <a href="https://github.com/hrj2233/hyundai-auto-site" class="btn" target="_blank">Github</a>
               </div>
               <div class="skill">
-                <span>#HTML/CSS</span>
-                <span>#scss</span>
-                <span>#gsap</span>
-                <span>#swiper</span>
+                <span>#HTML</span>
+                <span>#CSS</span>
+                <span>#SCSS</span>
                 <span>#JavaScript</span>
-                <span>#jquery</span>
+                <span>#jQuery</span>
+                <span>#Swiper</span>
+                <span>#GSAP</span>
               </div>
             </div>
             <div class="img_wrap">
